relative images path

--- a/src/components/account/company/appsco-account-devices-item.html
+++ b/src/components/account/company/appsco-account-devices-item.html
@@ -278,13 +278,13 @@
                 if(this._computeIsADevice(device)) {
                     // It is a mobile
                     if(device.operatingSystem === "Android")
-                        return '../images/devices/android.png';
+                        return '../../../../images/devices/android.png';
                     if(device.operatingSystem === "Windows")
-                        return '../images/devices/unknown.png';
-                    return '../images/devices/ios.png';
+                        return '../../../../images/devices/unknown.png';
+                    return '../../../../images/devices/ios.png';
                 }
                 // It is a desktop
-                return '../images/devices/mac.png';
+                return '../../../../images/devices/mac.png';
             },
 
             _onApproveAction: function(event) {
