--- a/src/components/account/appsco-account-image.html
+++ b/src/components/account/appsco-account-image.html
@@ -41,14 +41,14 @@ Account image is used to present account in form of an image or initials if imag
             }
         </style>
 
-            <template is="dom-if" if="[[ account.picture_url ]]">
+            <template is="dom-if" if="[[ _pictureUrl ]]">
                 <iron-image class="account-image"
                             sizing="cover"
                             preload fade
-                            src="[[ account.picture_url ]]"></iron-image>
+                            src="[[ _pictureUrl ]]"></iron-image>
             </template>
 
-            <template is="dom-if" if="[[ !account.picture_url ]]">
+            <template is="dom-if" if="[[ !_pictureUrl ]]">
                 <div class="account-image account-initials">
                     <span class="initials">[[ _accountInitials ]]</span>
                 </div>
@@ -73,20 +73,33 @@ Account image is used to present account in form of an image or initials if imag
                 _accountInitials: {
                     type: String,
                     computed: '_computeAccountInitials(account)'
+                },
+
+                _pictureUrl: {
+                    type: String,
+                    computed: '_computePictureUrl(account)'
                 }
             },
 
+            _computePictureUrl: function(account) {
+                if (account.account && account.account.picture_url) {
+                    return account.account.picture_url;
+                }
+                return account.picture_url ? account.picture_url : null;
+            },
+
             _computeAccountInitials: function(account) {
+                var acc = !!account.account ? account.account : account;
                 var initials = '';
 
-                if (account && account.first_name && account.last_name) {
-                    initials = account.first_name.substring(0, 1) + account.last_name.substring(0, 1);
+                if (acc && acc.first_name && acc.last_name) {
+                    initials = acc.first_name.substring(0, 1) + acc.last_name.substring(0, 1);
                 }
-                else if (account && account.name) {
-                    initials = account.name.substring(0, 2);
+                else if (acc && acc.name) {
+                    initials = acc.name.substring(0, 2);
                 }
-                if(account && account.email && '' === initials) {
-                    initials = account.email.substring(0, 2);
+                if(acc && acc.email && '' === initials) {
+                    initials = acc.email.substring(0, 2);
                 }
 
                 return initials;
