Find country from appsco

--- a/src/components/components/appsco-ip-country.html
+++ b/src/components/components/appsco-ip-country.html
@@ -55,7 +55,7 @@ Date format
                 }
                 var request = document.createElement('iron-request'),
                     options = {
-                        url: 'http://www.geoplugin.net/json.gp?ip='+this.ip,
+                        url: 'https://appsco.com/public/geoip?ip='+this.ip,
                         method: 'GET',
                         handleAs: 'json'
                     };
