DASH-3365 [Frontend][Notification] Modify notifications to show notifications as numbers

--- a/src/components/notifications/appsco-notification-icon.html
+++ b/src/components/notifications/appsco-notification-icon.html
@@ -72,7 +72,7 @@
             <div class="notification-count"> [[ notificationCount ]] </div>
             <paper-icon-button id="newNotificationsAction"
                                class="action-icon new-notifications-icon"
-                               icon="social:notifications-active"
+                               icon="social:notifications"
                                title="Notifications"
                                ></paper-icon-button>
         </div>
