DASH-3437 [Backend] SSO resource can be shared to unmanaged users

--- a/src/components/resource/appsco-share-resource.html
+++ b/src/components/resource/appsco-share-resource.html
@@ -860,6 +860,7 @@
                 var list = JSON.parse(JSON.stringify(this._accountListAll)),
                     length = list.length;
 
+                this.set('_selectedAccounts', []);
                 for (var i = 0; i < length; i++) {
                     if (list[i].selected) {
                         this._selectedAccounts.push(list[i]);
